@@ -24,6 +24,7 @@ disk_full_action = SUSPEND
 disk_error_action = SUSPEND
 ##tcp_listen_port = 
 tcp_listen_queue = 5
+tcp_max_per_addr = 1
 ##tcp_client_ports = 1024-65535
 tcp_client_max_idle = 0
 enable_krb5 = no
